Fixed overfow on mobile devices, disabled spectra link in footer\

--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -69,7 +69,7 @@
       }
 
       h2 {
-        font-size: 24px;
+        font-size: 22px;
         line-height: 36px;
       }
     }
